<resources>
    <string name="app_name">Chuqabp</string>

    <!--Login-->
    <string name="login">BIENVENIDO</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">INICIAR SESIÓN</string>
    <string name="new_user">¿No tienes cuenta?</string>
    <string name="sign_up">Crear cuenta</string>
    <string name="terms_and_conditions">Términos y condiciones</string>
    <string name="i_forgot_my_password">Olvidé mi contraseña</string>

    <!--Forgot password-->
    <string name="forgot_password_ok">Petición recibida. Por favor revise su correo electrónico</string>
    <string name="forgot_password_error">Correo electrónico no registrado</string>

    <!--Create Account-->
    <string name="createAccount">CREAR CUENTA</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="sign_up_uppercase">Crear cuenta</string>
    <string name="acept_terms_and_conditions">Acepto los </string>

    <!--Error user login/create account-->
    <string name="mandatory_field">Debe rellenar los campos obligatorios</string>
    <string name="invalid_email">Correo no válido</string>
    <string name="password_matches">Contraseña y la confirmación de contraseña deben coincidir</string>
    <string name="password_length">Contraseña debe tener al menos 8 caracteres</string>
    <string name="incorrect_user_or_password">Usuario o contraseña incorrecta</string>
    <string name="user_exist">Ya existe ese usuario registrado</string>
    <string name="error_terms_and_conditios">Debes aceptar los términos y condiciones</string>

    <!--Profile-->
    <string name="profile">Ver y editar perfil</string>
    <string name="edit_name">Edita tu nombre</string>
    <string name="edit_surname">Edita tus apellidos</string>
    <string name="edit_country">Edita tu nacionalidad</string>
    <string name="edit_password">Cambia tu contraseña</string>
    <string name="logout">Cerrar sesión</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="search">Buscar...</string>
    <string name="sent_instructions_to_change_password">Hemos enviado a tu correo las instrucciones para cambiar la contraseña</string>
    <string name="logout_question">¿Estás seguro que quieres salir?</string>
    <string name="delete_account_first_question">¿Estás seguro que quieres eliminar la cuenta?</string>
    <string name="delete_account_second_question">Esto elimina todos sus datos de forma permanente, ¿desea continuar?</string>

    <!--Create Person-->
    <string name="location">Ubicación</string>
    <string name="phone">Teléfono</string>
    <string name="date">Fecha de nacimiento, Ej. 26/08/1982</string>
    <string name="crate_person">Dar de Alta</string>
    <string name="change_photo">Cambiar foto</string>
    <string name="person_mandatory_field">Nombre, apellidos, fecha de nacimiento y localización son campos obligatorios</string>
    <string name="add_menu">Add</string>

    <!--Detail Person-->
    <string name="delete_question_title">Confirmación</string>
    <string name="delete_question_description">¿Estás seguro que desea eliminar esa persona?</string>
    <string name="delete">Eliminar</string>
    <string name="edit_menu">Editar</string>
    <string name="delete_menu">Eliminar</string>
    <string name="refresh_menu">Refrescar</string>
    <string name="account">Mi cuenta</string>

    <!--Update Person-->
    <string name="update_person">Actualizar</string>

    <!--Main Menu-->
    <string name="new_case">Nuevo Caso</string>
    <string name="cases">Casos</string>
    <string name="persons">Personas</string>
    <string name="training">Formación</string>
    <string name="configuration">Ajustes</string>

    <!--Main Menu-->
    <string name="hint_select_person">¿Quién sufrió la agresión?</string>
    <string name="hint_select_date">¿Qué día ocurrió?</string>
    <string name="hint_select_time">¿Sobre qué hora?</string>
    <string name="hint_select_where">¿En que lugar?</string>
    <string name="hint_select_type">¿Qué tipo de agresión?</string>
    <string name="checkbox_title_physical">Física</string>
    <string name="checkbox_title_sexual">Sexual</string>
    <string name="checkbox_title_psychological">Psicológica</string>
    <string name="checkbox_title_social">Social</string>
    <string name="checkbox_title_economic">Económica</string>
    <string name="hint_select_how">¿Cómo sucedieron los hechos?</string>
    <string name="hint_select_how_explanation">Describa la situación...</string>
    <string name="register_case">Registrar caso</string>

    <!--Detail Case-->
    <string name="delete_case_question_title">Confirmación</string>
    <string name="delete_Case_question_description">¿Estás seguro que desea eliminar ese caso?</string>

    <!--Update Case-->
    <string name="update_case">Actualizar</string>

    <!--Resources-->
    <string name="add_resource">Añada los recursos</string>
    <string name="resources">Recursos asignados</string>
    <string name="new_person">Nueva Persona</string>

    <!--Case status-->
    <string name="open">Abierto</string>
    <string name="closed">Cerrado</string>

    <!--Close case-->
    <string name="close_case">Cerrar caso</string>
    <string name="close_case_description">Seleccione el motivo</string>
    <string name="close_case_description_hint">Describe el motivo...</string>

    <!--Filter persons-->
    <string name="filter_name_surnames">Filtrar por nombre y apellidos...</string>
    <string name="filter_location">Filtrar por ubicación...</string>

    <!--Filter cases-->
    <string name="filter_case_name_surnames">Filtrar por nombre y apellidos...</string>
    <string name="filter_case_location">Filtrar por ubicación...</string>
    <string name="filter_case_range_date">Filtrar por rango de fechas...</string>
    <string name="all">Todas</string>
    <string name="open_cases_filter">Abiertas</string>
    <string name="closed_cases_filter">Cerradas</string>

</resources>
