<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <item
            android:id="@+id/action_refresh"
            android:icon="@drawable/ic_refresh"
            app:showAsAction="always"
            android:title="@string/refresh_menu" />

    <item
            android:id="@+id/action_add"
            android:icon="@drawable/ic_add"
            app:showAsAction="always"
            android:title="@string/add_menu" />

    <item
            android:id="@+id/action_edit"
            android:icon="@drawable/ic_edit"
            app:showAsAction="always"
            android:title="@string/edit_menu" />

    <item
            android:id="@+id/action_delete"
            android:icon="@drawable/ic_delete"
            app:showAsAction="always"
            android:title="@string/delete_menu" />

    <item
            android:id="@+id/action_account"
            android:icon="@drawable/ic_account_circle"
            app:showAsAction="always"
            android:title="@string/account" />

</menu>