<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewmodel"
                type="org.sic4change.chuqabp.course.ui.main.newperson.NewPersonViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/ivPhotoPerson"
                    android:layout_width="@dimen/create_case_photo"
                    android:layout_height="@dimen/create_case_photo"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/image_border"
                    android:background="@drawable/ic_add_a_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone"/>

            <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:hint="@string/name"
                    android:textSize="14sp"
                    android:inputType="textCapWords"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/margin_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivPhotoPerson" />

            <EditText
                    android:id="@+id/etSurnames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:hint="@string/surname"
                    android:textSize="14sp"
                    android:inputType="textCapWords"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                    android:id="@+id/etBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:textSize="14sp"
                    android:hint="@string/date"
                    android:inputType="date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etSurnames" />

            <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:hint="@string/phone"
                    android:textSize="14sp"
                    android:inputType="phone"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etBirthday" />

            <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:hint="@string/email"
                    android:textSize="14sp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etPhone" />

            <EditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:hint="@string/location"
                    android:textSize="14sp"
                    android:inputType="textCapWords"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/common_google_signin_btn_text_light_disabled"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail" />


            <Button
                    android:id="@+id/btnCreatePerson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:text="@string/crate_person"
                    android:layout_margin="@dimen/margin_default"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/ivCenter"
                    app:layout_constraintTop_toBottomOf="@+id/etLocation" />

            <View
                    android:id="@+id/ivCenter"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etLocation">
            </View>

            <Button
                    android:id="@+id/btnCancelPerson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cardview_dark_background"
                    android:text="@string/cancel"
                    android:layout_margin="@dimen/margin_default"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/ivCenter"
                    app:layout_constraintTop_toBottomOf="@+id/etLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
